version = 0.0.0_dev # home-made "Velocity" equivalent -- for CML now. Still working.
git-svn-id: https://svn.code.sf.net/p/jspecview/svn@98 1262bc75-0126-4021-b206-820d13540e36